Fixed overlapping z-indices

--- a/styles.css
+++ b/styles.css
@@ -159,14 +159,14 @@ video {
     width: 17%;
     height: 100%;
     display: block;
-    z-index: 1;
+    z-index: 0;
 }
 
 .projectDownloadIcon {
     width: 100%;
     height: 100%;
     display: block;
-    z-index: 1;
+    z-index: 0;
 }
 
 /* whois */
